force-app/main/default/objects/ssot__PersonExamination__dlm/fields/ssot__ParentPersonExaminationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentPersonExaminationId__c</fullName>
    <label>Parent Person Examination</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentPersonExaminationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>