force-app/main/default/objects/ssot__PersonExamination__dlm/fields/ssot__rel_1719818174817_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818174817_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonExamination_AccountContactId_m_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>PersonExamination_AccountContactId_m_rel</relationshipLabel>
    <relationshipName>rel_1719818174817_end</relationshipName>
    <type>Lookup</type>
</CustomField>