force-app/main/default/objects/ssot__PersonExamination__dlm/fields/ssot__rel_1719819618273_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819618273_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonExamination_ParentPersonExamin_rel</label>
    <referenceTo>ssot__PersonExamination__dlm</referenceTo>
    <relationshipLabel>PersonExamination_ParentPersonExamin_rel</relationshipLabel>
    <relationshipName>rel_1719819618273_end</relationshipName>
    <type>Lookup</type>
</CustomField>