force-app/main/default/objects/ssot__PersonExamination__dlm/fields/ssot__rel_1720291164457_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291164457_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonExamination_IndividualId_map_I_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PersonExamination_IndividualId_map_I_rel</relationshipLabel>
    <relationshipName>rel_1720291164457_end</relationshipName>
    <type>Lookup</type>
</CustomField>