force-app/main/default/objects/ssot__PersonExamination__dlm/fields/ssot__ScoreType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScoreType__c</fullName>
    <label>Score Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScoreType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>